# qa_guru_5_18_with_poetry

./: pyproject.toml
