[tool.poetry]
name = "test project with poetry"
version = "0.1.0"
description = "this is test project with poetry, selene, pytest and pylint"
authors = ["svasilchenko <liketravelin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc2"
pytest = "7.4.0"

[tool.poetry.group.dev.dependencies]
pylint = "2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
